# irt-leaderboard

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  Caddyfile-docker  Dockerfile  README.md  config.toml  docker-compose.yaml  luigi.toml  package.json  pylintrc  pyproject.toml  rclone-exclude.txt  tmux-launch.sh
.github/workflows/: python-package.yml
config/: mrqa.toml  squad-mlqa-1.1-dev.yml  squad-mlqa-2.0-dev.yml  squad-v1.1.yml  squad-v2.0.json
frontend/: .dockerignore  .gitignore  Dockerfile  nginx.conf  package.json
frontend/public/: index.html
frontend/src/: App.css  App.test.tsx  App.tsx  Graphic.tsx  InspectExamples.tsx  IrtExamples.tsx  Leaderboard.tsx  Paired.tsx  Stats.tsx  data_types.ts  index.css  index.tsx  react-app-env.d.ts  serviceWorker.ts  setupTests.ts
leaderboard/: __init__.py  cat_sampling_stability.py  codalab.py  comparison_stability.py  config.py  data.py  irt_stats.py  linear.py  log.py  main.py  plots.py  power.py  rank_stability.py  sampling_stability.py  squad.py  squad_eval_v2.py  stats.py  tasks.py  test_stats.py  topics.py  visualize.py
leaderboard/analysis/: quizbowl.py  squad.py
leaderboard/irt/: evaluate.py  model.py  model_svi.py  stan_model.py  test_model.py
leaderboard/irt/pyirt/: logistic_model.py  multidim_one_param_logistic.py  one_param_logistic.py  three_param_logistic.py  two_param_logistic.py
leaderboard/irt/stan/: 1PL.stan  2PL.stan
leaderboard/www/: app.py  database.py  test_app.py
scripts/: competitiond.py  patch_mlqa.py  vw-hyperopt.py
